# Galaxy

./: CMakeLists.txt  README.md  readme.txt
include/: CorridorBuilder2d.hpp
src/: main.cpp
